--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   <div align="center">
     <img src="https://s3.ap-south-1.amazonaws.com/www.basava.com/aar_logo_final.png" style="max-width: 20%;">
     <h1>Congratulations!!! </h1>
-      <h2>Welcome to AAR SOURCE| Ram Hemareddy</h2>
+      <h2>Welcome to my first CICD codepipeline deployment NCPL training</h2>
     <h3>This application was deployed using AWS CodeDeploy.</h3>
-    <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
+    <p>For next steps, read the <a href="https://github.com/venakteshmuddada/CICDCodeDeployCodeBuild/">AWS CodeDeploy Documentation</a>.</p>
   </div>
 </body>
 </html>
